--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Admin Penal</title>
+    <title>PaymentHub</title>
   </head>
   <body>
     <div id="root"></div>
